app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

:root {
  --lightgreen: rgba(215, 243, 228, 0.4);
  --palegreen: #F1F9F3;
  --green: #C7E5CE;
  --cream: #FAF5E1;
  --lightblue: #6DBCD9;
  --orange: #E76F51;
}

html {
  margin-bottom: 15px;
}

main {
  min-height: 90vh;
}

h1 {
  margin-top: 15px !important;
}

.lightgreen {
  background-color: var(--lightgreen) !important;
  border-color: var(--lightgreen) !important;
}

.green {
  background-color: var(--green) !important;
  border-color: var(--green) !important;
}

.cream {
  background-color: var(--cream) !important;
  border-color: var(--cream) !important;
}

.btn.btn-primary {
  background-color: var(--lightblue);
  border-color: var(--lightblue);
}

.btn.btn-danger {
  background-color: var(--orange);
  border-color: var(--orange);
}

.navbar.navbar-expand-md {
  padding-top: 5px;
  padding-bottom: 5px
}

.navbar-brand {
  margin-left: 10px;
}

.navbar-toggler:hover,
.navbar-toggler:focus {
  background-color: var(--palegreen);
}

.nav-item > .nav-link {
  color: #000;
  margin-left: 10px
}

.nav-item > .nav-link:hover,
.nav-item > .nav-link:focus {
  color: #FFF;
}

.card.stock-card {
  min-height: 95%;
  min-width: 75%;
  align-self: center;
  padding-bottom: 15px;
  margin: 10px 0px;
  text-align: center;
  box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
}

.card.detail-card {
  max-width: 75%;
}

